feat: 更新根目錄 app.py 為完整 SIE 平台多模組版本

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-wikipedia-api
-python-dateutil
-streamlit
-plotly
-pandas
+streamlit>=1.28.0
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+pandas>=2.0.0
+plotly>=5.15.0
+wikipedia-api>=0.6.0
+google-generativeai>=0.3.0
+lxml>=4.9.0 
