--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,7 @@ pandas>=2.0.0
 plotly>=5.15.0
 wikipedia-api>=0.6.0
 google-generativeai>=0.3.0
-lxml>=4.9.0 
+lxml>=4.9.0
+PyMuPDF>=1.26.0
+spacy>=3.8.0
+zh-core-web-sm>=3.8.0 
